--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,12 +21,11 @@
     <dimen name="sessions_button_height">48dp</dimen>
     <dimen name="sessions_button_margin">8dp</dimen>
 
-    <!-- Block margin -->
+    <!-- Margin -->
     <dimen name="default_margin">8dp</dimen>
     <dimen name="default_small_margin">4dp</dimen>
-    <dimen name="default_bottom_button_margin">50dp</dimen>
-
-    <dimen name="top_logo_margin">50dp</dimen>
+    <dimen name="default_bottom_margin">50dp</dimen>
+    <dimen name="logo_top_margin">50dp</dimen>
 
     <dimen name="small_button_width">200dp</dimen>
     <dimen name="button_corner_radius">18dp</dimen>
