--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,6 +94,7 @@
 
     <style name="MaterialLoginInput" parent="MaterialInput">
         <item name="android:textColor">@color/white</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_white</item>
     </style>
 
     <style name="MaterialSpinnerLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
@@ -155,6 +156,14 @@
 
     <style name="smallButton" parent="baseButton">
         <item name="android:layout_width">@dimen/small_button_width</item>
+        <item name="android:layout_marginStart">2dp</item>
+        <item name="android:layout_marginEnd">2dp</item>
+        <item name="android:backgroundTint">@color/selector_dark_blue</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
+    </style>
+
+    <style name="largeButton" parent="baseButton">
+        <item name="android:layout_width">@dimen/large_button_width</item>
         <item name="android:layout_marginStart">2dp</item>
         <item name="android:layout_marginEnd">2dp</item>
         <item name="android:backgroundTint">@color/selector_dark_blue</item>
