--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -78,7 +78,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/saveScheduleButton"
-        style="@style/smallButton"
+        style="@style/largeButton"
         android:text="Сохранить"
 
         app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
