--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -194,7 +194,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/scheduleServiceBtn"
                 android:visibility="gone"
-                style="@style/smallButton"
+                style="@style/largeButton"
                 android:layout_gravity="center"
                 android:text="Расписание" />
         </LinearLayout>
