--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -58,12 +58,13 @@
             android:hint="Сообщения"
             android:inputType="textMultiLine|textCapSentences"
             android:textColor="@color/white"
-            android:textColorHint="@color/white50" />
+            android:textColorHint="@color/white50"
+            android:textCursorDrawable="@drawable/cursor_white" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/activity_messages_btn_send"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="5"
             android:fontFamily="@font/font_awesome_solid"
             android:text="" />
