--- a/app/src/main/res/layout/activity_creation_comment.xml
+++ b/app/src/main/res/layout/activity_creation_comment.xml
@@ -48,7 +48,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/activity_creation_comment_btn_rate"
-        style="@style/largeButton"
+        style="@style/mainButton"
         android:layout_marginBottom="@dimen/default_bottom_margin"
         android:text="@string/rate"
         app:layout_constraintBottom_toBottomOf="parent"
