--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -79,13 +79,13 @@
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:text="@string/resendCode" />
+                android:text="@string/resend_code" />
         </LinearLayout>
     </LinearLayout>
 
     <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.ProgressButton
         android:id="@+id/activity_verify_phone_number_pbtn_log_in"
-        style="@style/progressButton"
+        style="@style/mainButton"
         android:layout_marginBottom="@dimen/default_bottom_margin"
         android:gravity="bottom"
         android:text="Далее" />
