--- a/app/src/main/res/layout/element_profile_service.xml
+++ b/app/src/main/res/layout/element_profile_service.xml
@@ -22,7 +22,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/nameAddServiceTB" />
+                android:text="@string/title" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
                 android:id="@+id/element_profile_service_rb_rating"
