--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,5 +2,15 @@
 <resources>
     <declare-styleable name="ProgressButton">
         <attr name="android:text"/>
+        <attr name="android:layout_width"/>
+        <attr name="android:layout_height"/>
+        <attr name="android:fontFamily"/>
+        <attr name="android:textAllCaps"/>
+        <attr name="android:layout_marginStart"/>
+        <attr name="android:layout_marginEnd"/>
+        <attr name="android:layout_marginTop"/>
+        <attr name="android:layout_marginBottom"/>
+        <attr name="android:backgroundTint"/>
+        <attr name="cornerRadius"/>
     </declare-styleable>
 </resources>
