--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,10 +27,8 @@
     <dimen name="default_bottom_margin">50dp</dimen>
     <dimen name="logo_top_margin">50dp</dimen>
 
-    <dimen name="small_button_width">150dp</dimen>
-    <dimen name="large_button_width">250dp</dimen>
+    <dimen name="button_width">220dp</dimen>
     <dimen name="button_corner_radius">18dp</dimen>
-
     <dimen name="button_progress_bar_size">36dp</dimen>
 
 </resources>
