--- a/app/src/main/res/layout/fragment_premium.xml
+++ b/app/src/main/res/layout/fragment_premium.xml
@@ -93,7 +93,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/fragment_premium_btn_set"
-            style="@style/largeButton"
+            style="@style/mainButton"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:text="Получить премиум"/>
