--- a/app/src/main/res/layout/part_top_panel.xml
+++ b/app/src/main/res/layout/part_top_panel.xml
@@ -24,6 +24,7 @@
             android:layout_width="@dimen/photo_avatar_width"
             android:layout_height="@dimen/photo_avatar_height"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/default_small_margin"
             tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 </com.google.android.material.appbar.MaterialToolbar>
